5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1618_2920.log
== TEST (2019-04-02 10:08:40) 
-- CODE:
var1 = float(int(26.90))
var2 = float(int(3.50))
var3 = float(int(3.00))
-- OUTPUT:
10.793225305981728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:11:23) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = print(var1 + var2 + var3)

-- OUTPUT:
26.93.53.0896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:12:23) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = float(input(var1 + var2 + var3)

-- ERROR:
File "XXXX", line 5
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:12:36) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = float(input(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(input(var1 + var2 + var3))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:13:42) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = float(int(var1 + var2 + var3))

-- OUTPUT:
26.93.53.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:03) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = float(round(x ,2)(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2)(var1 + var2 + var3))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:11) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = float(round(x ,2)(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2)(var1 + var2 + var3))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:14) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = float(round(x ,2))
var5 = float(input(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:42) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = float(round(x ,2))
var5 = float(input(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:17:04) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(3.50))
var3 = float(input(3.00))
var4 = float(round(x ,2))
var5 = float(input(var1 + var2 + var3))

-- EXECUTION TIME:
0.186142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:17:46) 
-- CODE:
var1 = float(input(21.90))
var2 = float(input(3.55))
var3 = float(input(2.00))
var4 = float(round(x ,2))
var5 = float(input(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:18:09) 
-- CODE:
var1 = float(input(21.90))
var2 = float(input(3.55))
var3 = float(input(2.00))
var4 = float(round(x ,2))
var5 = float(input(var1 + var2 + var3))

-- EXECUTION TIME:
0.195552
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:18:12) 
-- CODE:
var1 = float(input(21.90))
var2 = float(input(3.55))
var3 = float(input(2.00))
var4 = float(round(x ,2))
var5 = float(input(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:21:17) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(x ,2))
var5 = float(int(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:21:50) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 ,2))
var5 = float(int(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:21:53) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 ,2))
var5 = float(int(var1 + var2 + var3))

-- EXECUTION TIME:
0.137492
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:21:55) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 ,2))
var5 = float(int(var1 + var2 + var3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(round(x ,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:07) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 ,2))
var5 = float(input(var1 + var2 + var3))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:22:14) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 ,2))
var5 = float(input(var1 + var2 + var3))

-- EXECUTION TIME:
0.120541
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
26.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
26.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
26.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:19) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 ,2))
var5 = float(input(var1 + var2 + var3))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:28) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 , 2))
var5 = float(input(var1 + var2 + var3))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:22:31) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 , 2))
var5 = float(input(var1 + var2 + var3))

-- EXECUTION TIME:
0.160984
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
26.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
26.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
26.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:33) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(round(var1 + var2 + var3 , 2))
var5 = float(input(var1 + var2 + var3))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:23:52) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:23:56) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- EXECUTION TIME:
0.176376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:24:46) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:24:48) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- EXECUTION TIME:
0.168553
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
26.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
26.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
26.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:24:53) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.00))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:04) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:10) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:11) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:11) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:12) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:29) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.50))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:25:34) 
-- CODE:
var1 = float(int(21.90))
var2 = float(int(3.55))
var3 = float(int(2.50))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- EXECUTION TIME:
0.188398
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:33) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:27:38) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- EXECUTION TIME:
0.107873
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:42) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:27:47) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(var1 + var2 + var3, 2))

-- EXECUTION TIME:
0.203825
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:07) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:28:14) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- EXECUTION TIME:
0.264491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:49) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:28:56) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- EXECUTION TIME:
0.200099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:59) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:29:51) 
-- CODE:
var1 = float(input(21.95))
var2 = float(input(3.55))
var3 = float(input(2.55))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(input(var1 + var2 + var3))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:29:58) 
-- CODE:
var1 = float(input(21.95))
var2 = float(input(3.55))
var3 = float(input(2.55))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- EXECUTION TIME:
0.235727
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 4, in <module>
    var4 = float(input(var1 + var2 + var3))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:30:01) 
-- CODE:
var1 = float(input(21.95))
var2 = float(input(3.55))
var3 = float(input(2.55))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4 = float(input(var1 + var2 + var3))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:30:13) 
-- CODE:
var1 = float(input(21.95))
var2 = float(input(3.55))
var3 = float(input(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:30:14) 
-- CODE:
var1 = float(input(21.95))
var2 = float(input(3.55))
var3 = float(input(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:30:17) 
-- CODE:
var1 = float(input(21.95))
var2 = float(input(3.55))
var3 = float(input(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:30:20) 
-- CODE:
var1 = float(input(21.95))
var2 = float(input(3.55))
var3 = float(input(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- EXECUTION TIME:
0.268395
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:30:41) 
-- CODE:
var1 = float(input(21.95))
var2 = float(input(3.55))
var3 = float(input(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:32:28) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:32:32) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- EXECUTION TIME:
0.178729
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:32:33) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(int(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:32:48) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.55))
var3 = float(int(2.55))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:33:21) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.50))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
var5 = float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var5 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:35:40) 
-- CODE:
var1 = float(round(x, 2))
var2 = float(int(21.95))
var3 = float(int(3.50))
var4 = float(int(2.50))
var5 = float(input(var1 + var2 + var3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:35:44) 
-- CODE:
var1 = float(round(x, 2))
var2 = float(int(21.95))
var3 = float(int(3.50))
var4 = float(int(2.50))
var5 = float(input(var1 + var2 + var3))


-- EXECUTION TIME:
0.227008
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 1, in <module>
    var1 = float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:37:13) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.50))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
Float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Float(round(x, 2))
NameError: name 'Float' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:37:21) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.50))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
Float(round(x, 2))

-- EXECUTION TIME:
0.166566
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    Float(round(x, 2))
NameError: name 'Float' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:38:43) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.50))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:38:45) 
-- CODE:
var1 = float(int(21.95))
var2 = float(int(3.50))
var3 = float(int(2.50))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.122657
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:39:39) 
-- CODE:
var1 = float(int())
var2 = float(int())
var3 = float(int())
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:39:41) 
-- CODE:
var1 = float(int())
var2 = float(int())
var3 = float(int())
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.173954
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:39:43) 
-- CODE:
var1 = float(int())
var2 = float(int())
var3 = float(int())
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:39:45) 
-- CODE:
var1 = float(int())
var2 = float(int())
var3 = float(int())
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.142346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:39:47) 
-- CODE:
var1 = float(int())
var2 = float(int())
var3 = float(int())
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:39:49) 
-- CODE:
var1 = float(int())
var2 = float(int())
var3 = float(int())
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.159408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:23) 
-- CODE:
var1 = float(int(500.00))
var2 = float(int(2))
var3 = float(int(1))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:40:34) 
-- CODE:
var1 = float(int(500.00))
var2 = float(int(2))
var3 = float(int(1))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.1277
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:31) 
-- CODE:
var1 = float(int())
var2 = float(int())
var3 = float(int())
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:41:33) 
-- CODE:
var1 = float(int())
var2 = float(int())
var3 = float(int())
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.140686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:27) 
-- CODE:
var1 = float(int(5.75))
var2 = float(int(3.37))
var3 = float(int(2.19))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:42:32) 
-- CODE:
var1 = float(int(5.75))
var2 = float(int(3.37))
var3 = float(int(2.19))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.225176
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:42) 
-- CODE:
var1 = float(int(5.75))
var2 = float(int(3.37))
var3 = float(int(2.19))
var4 = float(input(var1 + var2 + var3))
float(round(x, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 3))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:42:46) 
-- CODE:
var1 = float(int(5.75))
var2 = float(int(3.37))
var3 = float(int(2.19))
var4 = float(input(var1 + var2 + var3))
float(round(x, 3))

-- EXECUTION TIME:
0.190936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 3))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:47) 
-- CODE:
var1 = float(int(5.75))
var2 = float(int(3.37))
var3 = float(int(2.19))
var4 = float(input(var1 + var2 + var3))
float(round(x, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 3))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:14) 
-- CODE:
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:17) 
-- CODE:
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:43:20) 
-- CODE:
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.132241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:43:21) 
-- CODE:
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.130922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:43:21) 
-- CODE:
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.118582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:45:16) 
-- CODE:
from math import*
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:45:19) 
-- CODE:
from math import*
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- EXECUTION TIME:
0.117889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 6, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:45:26) 
-- CODE:
from math import*
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(var1 + var2 + var3))
float(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    float(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:26) 
-- CODE:
from math import*
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(round(x, 2(var1 + var2 + var3)))


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:46:29) 
-- CODE:
from math import*
var1 = float(int(5.75456))
var2 = float(int(3.37654))
var3 = float(int(2.19789))
var4 = float(input(round(x, 2(var1 + var2 + var3)))


-- EXECUTION TIME:
0.199057
-- ERROR:
  File "/home/codebench/codes/1618/2920/main.py", line 7
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:48:27) 
-- CODE:
var1 = float(input(5.75456))
var2 = float(input(3.37654))
var3 = float(input(2.19789))
var4 = float(input(round(x, 2(var1 + var2 + var3)))


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:49:46) 
-- CODE:
var1 = float(input("quilo do prato"))
var2 = float(input("suco"))
var3 = float(input("sobremesa"))
var4 = float(input(round(x, 2(var1 + var2 + var3)))


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:50:50) 
-- CODE:
var1 = float(input("quilo do prato"))
var2 = float(input("suco"))
var3 = float(input("sobremesa"))

var4 = float(input(var1 + var2 + var3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var4 = float(input(var1 + var2 + var3))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:50:53) 
-- CODE:
var1 = float(input("quilo do prato"))
var2 = float(input("suco"))
var3 = float(input("sobremesa"))

var4 = float(input(var1 + var2 + var3))


-- EXECUTION TIME:
0.15662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2920/main.py", line 5, in <module>
    var4 = float(input(var1 + var2 + var3))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:52:40) 
-- CODE:
var1 = float(input("quilo do prato"))
var2 = float(input("suco"))
var3 = float(input("sobremesa"))

var4 = var1 + var2 + var3


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var4 = float(input(var1 + var2 + var3))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:52:42) 
-- CODE:
var1 = float(input("quilo do prato"))
var2 = float(input("suco"))
var3 = float(input("sobremesa"))

var4 = var1 + var2 + var3


-- EXECUTION TIME:
0.116906
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:53:42) 
-- CODE:
var1 = float(input("quilo do prato"))
var2 = float(input("suco"))
var3 = float(input("sobremesa"))

var4 = var1 + var2 + var3
print(var4)

-- OUTPUT:
896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:53:44) 
-- CODE:
var1 = float(input("quilo do prato"))
var2 = float(input("suco"))
var3 = float(input("sobremesa"))

var4 = var1 + var2 + var3
print(var4)

-- EXECUTION TIME:
0.182668
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
896.12
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
390.03
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
226.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:54:36) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(2.50))
var3 = float(input(3.00))

var4 = var1 + var2 + var3
print(var4)

-- OUTPUT:
26.92.53.0896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:54:39) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(2.50))
var3 = float(input(3.00))

var4 = var1 + var2 + var3
print(var4)

-- EXECUTION TIME:
0.155149
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
26.92.53.0896.12
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
26.92.53.0390.03
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
26.92.53.0226.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:54:41) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(2.50))
var3 = float(input(3.00))

var4 = var1 + var2 + var3
print(var4)

-- OUTPUT:
26.92.53.0896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:54:44) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(2.50))
var3 = float(input(3.00))

var4 = var1 + var2 + var3
print(var4)

-- OUTPUT:
26.92.53.0896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:54:53) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(2.50))
var3 = float(input(3.00))

var4 = var1 + var2 + var3
print(var4)

-- OUTPUT:
26.92.53.0896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:54:56) 
-- CODE:
var1 = float(input(26.90))
var2 = float(input(2.50))
var3 = float(input(3.00))

var4 = var1 + var2 + var3
print(var4)

-- EXECUTION TIME:
0.197132
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
26.92.53.0896.12
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
26.92.53.0390.03
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
26.92.53.0226.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
